task13/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - yhorodetska.dynv6.net
    secretName: quickstart-nginx-tls
  rules:
  - host: yhorodetska.dynv6.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
